# code-samples

./: .gitignore  README.md
.github/workflows/: chess-ci.yml
AngryMagnets/: readme.txt
AngryMagnets/src/: GameRunner.java  SimulatorCanvas.java
AngryMagnets/src/level/: Antimatter.java  Cannon.java  Enemy.java  Explosion.java  Level.java
AngryMagnets/src/physics/: Collideable.java  ElectricField.java  Environment.java  Field.java  MagneticField.java  Particle.java  Vector2D.java  Wall.java
GEB/: mu.sml  strict-logical.sml
Skyline/: readme.txt
Skyline/Sources/: Skyline.java  TerminaCanvas.java
chess/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  ROADMAP.md  SPEC.md  bridge.cpp  bridge.h  chess.cpp  chess.h
chess/mcp-server/: .gitignore  pyproject.toml
chess/mcp-server/chess_mcp/: __init__.py  __main__.py  clock.py  engine.py  engine_path.py  game.py  material.py  notation.py  pgn.py  recording.py  server.py  types.py
chess/mcp-server/tests/: conftest.py  test_actions.py  test_clock.py  test_engine.py  test_game.py  test_material.py  test_notation.py  test_pgn.py  test_recording.py  test_seeded.py  test_server.py  test_timed_game.py
chess/tests/: chess_tests.cpp
houghton/: all_results.csv  all_results.txt  archive.sh  archive_results.sh  cumulative.sh  download.sh  note  process_results.py  result.csv  result.txt  statuses.txt  ua-lookup.py
houghton/archive/2017/02/: 17-02-2017_5001.html  17-02-2017_5061.html  17-02-2017_5109.html  17-02-2017_5141.html  18-02-2017_5001.html  18-02-2017_5061.html  18-02-2017_5109.html  18-02-2017_5141.html  19-02-2017_5001.html  19-02-2017_5061.html  19-02-2017_5109.html  19-02-2017_5141.html  20-02-2017_5001.html  20-02-2017_5061.html  20-02-2017_5109.html  20-02-2017_5141.html  21-02-2017_5001.html  21-02-2017_5061.html  21-02-2017_5109.html  21-02-2017_5141.html  22-02-2017_5001.html  22-02-2017_5061.html  22-02-2017_5109.html  22-02-2017_5141.html  23-02-2017_5001.html  23-02-2017_5061.html  23-02-2017_5109.html  23-02-2017_5141.html  24-02-2017_5001.html  24-02-2017_5061.html  24-02-2017_5109.html  24-02-2017_5141.html  25-02-2017_5001.html  25-02-2017_5061.html  25-02-2017_5109.html  25-02-2017_5141.html  26-02-2017_5001.html  26-02-2017_5061.html  26-02-2017_5109.html  26-02-2017_5141.html  (+10 more)
houghton/archive/2017/03/: 01-03-2017_5001.html  01-03-2017_5061.html  01-03-2017_5109.html  01-03-2017_5141.html  02-03-2017_5001.html  02-03-2017_5061.html  02-03-2017_5109.html  02-03-2017_5141.html  03-03-2017_5001.html  03-03-2017_5061.html  03-03-2017_5109.html  03-03-2017_5141.html  04-03-2017_5001.html  04-03-2017_5061.html  04-03-2017_5109.html  04-03-2017_5141.html  05-03-2017_5001.html  05-03-2017_5061.html  05-03-2017_5109.html  05-03-2017_5141.html  06-03-2017_5001.html  06-03-2017_5061.html  06-03-2017_5109.html  06-03-2017_5141.html  07-03-2017_5001.html  07-03-2017_5061.html  07-03-2017_5109.html  07-03-2017_5141.html  08-03-2017_5001.html  08-03-2017_5061.html  (+71 more)
houghton/tools/: cumulative.sh  extract_statuses.py  process_results.py
pwned/: hashpass.py  searchpass.py  split-passwords.c  split-passwords.py
(+520 files in other folders)
